<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".tmp_kt">

    <!-- Input Group -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temperature_prompt"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Now"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="temperature"
        android:ems="10"
        android:hint="@string/enter_current_temperature"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <!-- Output Group -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/converted_temperature_prompt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Now" />

    <TextView
        android:id="@+id/After_conversion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:text="77.0 °F" />

    <!-- Conversion Buttons -->
    <Button
        android:id="@+id/CtoF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/celsius_to_fahrenheit_button"
        app:layout_constraintEnd_toStartOf="@+id/FtoC"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/FtoC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit_to_celsius_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CtoF"
        app:layout_constraintTop_toTopOf="@+id/CtoF" />

    <!-- Vertical Positioning for the main block -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/conversion_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textView4,Now,textView5,After_conversion,CtoF,FtoC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back Button at the bottom -->
    <Button
        android:id="@+id/btnBackToMenu"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>