<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".menu_kt">

    <!-- Guidelines for a 2x3 grid -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <!-- Row 1 -->
    <ImageButton
        android:id="@+id/imageButton1"
        style="@style/Widget.App.MenuImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/content_description_bmi"
        android:src="@drawable/bmi_pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_middle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_top" />

    <TextView
        style="@style/Widget.App.MenuButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_description_bmi"
        app:layout_constraintEnd_toEndOf="@+id/imageButton1"
        app:layout_constraintStart_toStartOf="@+id/imageButton1"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <ImageButton
        android:id="@+id/imageButton2"
        style="@style/Widget.App.MenuImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/content_description_temperature_converter"
        android:src="@drawable/tmp_pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v_center"
        app:layout_constraintTop_toTopOf="@id/guideline_h_top" />

    <TextView
        style="@style/Widget.App.MenuButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_description_temperature_converter"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <!-- Row 2 -->
    <ImageButton
        android:id="@+id/imageButton3"
        style="@style/Widget.App.MenuImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/content_description_guess_number"
        android:src="@drawable/gus_pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_middle" />

    <TextView
        style="@style/Widget.App.MenuButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_description_guess_number"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <ImageButton
        android:id="@+id/imageButton4"
        style="@style/Widget.App.MenuImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/content_description_tic_tac_toe"
        android:src="@drawable/tic_pt"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v_center"
        app:layout_constraintTop_toTopOf="@id/guideline_h_middle" />

    <TextView
        style="@style/Widget.App.MenuButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_description_tic_tac_toe"
        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <!-- Row 3 -->
    <ImageButton
        android:id="@+id/imageButton5"
        style="@style/Widget.App.MenuImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/content_description_snake_game"
        android:src="@drawable/snake_ph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_bottom" />

    <TextView
        style="@style/Widget.App.MenuButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_description_snake_game"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <ImageButton
        android:id="@+id/imageButton6"
        style="@style/Widget.App.MenuImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/content_description_minesweeper"
        android:src="@drawable/mines_pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v_center"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_bottom" />

    <TextView
        style="@style/Widget.App.MenuButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_description_minesweeper"
        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
        app:layout_constraintStart_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

</androidx.constraintlayout.widget.ConstraintLayout>